= Changelog

:repo: https://github.com/rotaract/github-template
:compare: {repo}/compare

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== Added

=== Changed

=== Deprecated

=== Removed

=== Fixed

=== Security