@@ -3,12 +3,16 @@ name: EditorConfig Checker
 "on":
   pull_request:
   push:
+
+permissions:
+  contents: read
+
 jobs:
   editorconfig:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install editorconfig-checker
         uses: editorconfig-checker/action-editorconfig-checker@main
       - name: Run editorconfig-checker
