@@ -1,3 +1,1 @@
-*.html
-*.pdf
-.idea
+
