@@ -33,11 +33,11 @@ Community leaders have the right and responsibility to remove, edit, or reject c
 == Scope
 
 This Code of Conduct applies within all community spaces, and also applies when an individual is officially representing the community in public spaces.
-Examples of representing our community include using an official e-mail address, posting via an official social media account, or acting as an appointed representative at an online or offline event.
+Examples of representing our community include using an official email address, posting via an official social media account, or acting as an appointed representative at an online or offline event.
 
 == Enforcement
 
-Instances of abusive, harassing, or otherwise unacceptable behavior may be reported to the community leaders responsible for enforcement at mailto:support@rotaract.de[].
+Instances of abusive, harassing, or otherwise unacceptable behavior may be reported to the community leaders responsible for enforcement at mailto:oss@rotaract.de[].
 All complaints will be reviewed and investigated promptly and fairly.
 
 All community leaders are obligated to respect the privacy and security of the reporter of any incident.
@@ -78,14 +78,15 @@ Violating these terms may lead to a permanent ban.
 
 === 4. Permanent Ban
 
-Community Impact:: Demonstrating a pattern of violation of community standards, including sustained inappropriate behavior, harassment of an individual, or aggression toward or disparagement of classes of individuals.
+Community Impact::
+Demonstrating a pattern of violation of community standards, including sustained inappropriate behavior, harassment of an individual, or aggression toward or disparagement of classes of individuals.
 
 Consequence::
 A permanent ban from any sort of public interaction within the community.
 
 == Attribution
 
-This Code of Conduct is adapted from the https://www.contributor-covenant.org/[Contributor Covenant], version 2.1, available at https://www.contributor-covenant.org/version/2/1/code_of_conduct.html[].
+This Code of Conduct is adapted from the Contributor Covenant, version 2.1, available at https://www.contributor-covenant.org/version/2/1/code_of_conduct.html[].
 
 Community Impact Guidelines were inspired by https://github.com/mozilla/diversity[Mozilla's code of conduct enforcement ladder].
 
