@@ -22,7 +22,6 @@
  * @author     Ressort IT-Entwicklung - Rotaract Deutschland <it-entwicklung@rotaract.de>
  */
 class WP_Roundhousekick_Loader {
-
 	/**
 	 * The array of actions registered with WordPress.
 	 *
@@ -47,10 +46,8 @@ class WP_Roundhousekick_Loader {
 	 * @since    1.0.0
 	 */
 	public function __construct() {
-
 		$this->actions = array();
 		$this->filters = array();
-
 	}
 
 	/**
@@ -96,7 +93,6 @@ class WP_Roundhousekick_Loader {
 	 * @return   array                                  The collection of actions and filters registered with WordPress.
 	 */
 	private function add( $hooks, $hook, $component, $callback, $priority, $accepted_args ) {
-
 		$hooks[] = array(
 			'hook'          => $hook,
 			'component'     => $component,
@@ -106,7 +102,6 @@ class WP_Roundhousekick_Loader {
 		);
 
 		return $hooks;
-
 	}
 
 	/**
@@ -115,7 +110,6 @@ class WP_Roundhousekick_Loader {
 	 * @since    1.0.0
 	 */
 	public function run() {
-
 		foreach ( $this->filters as $hook ) {
 			add_filter( $hook['hook'], array( $hook['component'], $hook['callback'] ), $hook['priority'], $hook['accepted_args'] );
 		}
@@ -123,7 +117,5 @@ class WP_Roundhousekick_Loader {
 		foreach ( $this->actions as $hook ) {
 			add_action( $hook['hook'], array( $hook['component'], $hook['callback'] ), $hook['priority'], $hook['accepted_args'] );
 		}
-
 	}
-
 }
